--- a/views/layout.jade
+++ b/views/layout.jade
@@ -92,8 +92,8 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/')
-            img(src='#{settings.logo}', style='margin-top:-10px;height:40px;')
+          a.navbar-brand(href='/', style='padding: 15px 10px;')
+            img(src='#{settings.logo}', style='margin-top: -2px;max-width: 90px;')
         .collapse.navbar-collapse(id='navbar-collapse')
           ul.nav.navbar-nav
             li#home
