--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,8 @@ html
     script(src='//cdn.datatables.net/responsive/1.0.1/js/dataTables.responsive.js')
     script(src='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js')
     script(src='/javascripts/chart.js')
+    script(src='https://unpkg.com/popper.js@1/dist/umd/popper.min.js')
+    script(src='https://unpkg.com/tippy.js@4')
     script.
       $(document).ready(function(){
         $('##{active}').addClass('active');
