info tip size update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,11 @@ body {
 	cursor: help;
 }
 
+/* info hint size */
+.tippy-popper .tippy-content {
+	font-size: 1.5em;
+}
+
 /* datatable tweaks */
 table {
 	width: 100% !important;
