Switch from Jade to Pug

--- a/views/address.pug
+++ b/views/address.pug
@@ -47,11 +47,11 @@ block content
       .panel-heading
         strong #{settings.locale.ex_latest_transactions}
       table.table.table-bordered.table-striped.history-table
-        include ./includes/address_history.jade  
+        include includes/address_history
     .panel.panel-default.hidden-lg.hidden-md
       .panel-heading
         strong #{settings.locale.ex_latest_transactions}
       table.table.table-bordered.table-striped
-        include ./includes/address_history.jade    
+        include includes/address_history
     .footer-padding
             
