--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= settings.title
-    link(rel='stylesheet', href='/themes/#{settings.theme}/bootstrap.min.css')
+    link(rel='stylesheet', href='/themes/' + settings.theme + '/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/jqplot/jquery.jqplot.css')
     link(rel='stylesheet', href='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.css')
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
@@ -95,7 +95,7 @@ html
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='/', style='padding: 12px 10px;')
-            img(src='#{settings.logo}', style='margin-top: -3px;max-width: 120px;')
+            img(src=''+settings.logo+'', style='margin-top: -3px;max-width: 120px;')
         .collapse.navbar-collapse(id='navbar-collapse')
           ul.nav.navbar-nav
             li#home
@@ -129,7 +129,7 @@ html
                   span.menu-text #{settings.locale.menu_richlist}
             if settings.display.markets == true
               li#markets
-                a.navbar-link.loading(href='/markets/#{settings.markets.default}')
+                a.navbar-link.loading(href='/markets/'+settings.markets.default)
                   span.fa.fa-line-chart
                   span.menu-text #{settings.locale.menu_markets}
             if settings.display.api == true
@@ -218,46 +218,31 @@ html
       .row.text-center(style='margin-top:10px;margin-bottom:20px;')
         form.form-inline(method='post', action='/search')
           #index-search.form-group
-            input.form-control(type='text', name='search', placeholder='#{settings.locale.ex_search_message}', style='min-width:80%;margin-right:5px;')
+            input.form-control(type='text', name='search', placeholder=settings.locale.ex_search_message, style='min-width:80%;margin-right:5px;')
             button.btn.btn-success(type='submit') #{settings.locale.ex_search_button}
     block content
     .navbar.navbar-default.navbar-fixed-bottom.hidden-xs
       .col-md-4
-        if settings.display.github
-          ul.nav.navbar-nav
-            li.pull-left
-              a#github-icon(href="https://github.com/#{settings.github}", target='_blank')
-                span.glyphicon.fa.fa-github
-        if settings.display.slack
-          ul.nav.navbar-nav
-            li.pull-left
-              a#slack-icon(href="#{settings.slack}", target='_blank')
-                span.glyphicon.fa.fa-slack
         if settings.display.twitter
           ul.nav.navbar-nav
             li.pull-left
-              a#twitter-icon(href="https://twitter.com/#{settings.twitter}", target='_blank')
+              a#twitter-icon(href="https://twitter.com/"+settings.twitter, target='_blank')
                 span.glyphicon.fa.fa-twitter
         if settings.display.facebook
           ul.nav.navbar-nav
             li.pull-left
-              a#facebook-icon(href="https://www.facebook.com/#{settings.facebook}", target='_blank')
+              a#facebook-icon(href="https://www.facebook.com/"+settings.facebook, target='_blank')
                 span.glyphicon.fa.fa-facebook
         if settings.display.googleplus
           ul.nav.navbar-nav
             li.pull-left
-              a#googleplus-icon(href="https://plus.google.com/#{settings.googleplus}", target='_blank')
+              a#googleplus-icon(href="https://plus.google.com/"+settings.googleplus, target='_blank')
                 span.glyphicon.fa.fa-google-plus
-        if settings.display.bitcointalk
+        if settings.display.youtube
           ul.nav.navbar-nav
             li.pull-left
-              a#bitcointalk-icon(href="https://bitcointalk.org/index.php?topic=#{settings.bitcointalk}", target='_blank')
-                span.glyphicon.fa.fa-btc
-        if settings.display.website
-          ul.nav.navbar-nav
-            li.pull-left
-              a#website-icon(href="#{settings.website}", target='_blank')
-                span.glyphicon.fa.fa-link
+              a#youtube-icon(href="https://www.youtube.com/channel/"+settings.youtube, target='_blank')
+                span.glyphicon.fa.fa-youtube
       .col-md-4
         ul.nav
           li.text-center(style='margin-left:80px;margin-right:80px;')
