--- a/views/includes/address_history.pug
+++ b/views/includes/address_history.pug
@@ -9,7 +9,7 @@ tbody
     tr
       td.hidden-xs #{time} 
       td.hidden-xs
-        a(href='/tx/#{tx.txid}') #{tx.txid}
+        a(href='/tx/'+tx.txid+'') #{tx.txid}
       - var done = false
       - var out = 0
       - var vin = 0
