--- a/views/includes/rl_received.pug
+++ b/views/includes/rl_received.pug
@@ -17,7 +17,7 @@
           td(style='text-align:center;') 
             =count
           td
-            a(href='/address/#{item.a_id}') #{item.a_id}
-            include ./rl_labels.jade
+            a(href='/address/'+item.a_id+'') #{item.a_id}
+            include ./rl_labels.pug
           td.hidden-xs
             =itemFixed.toFixed(8)
