--- a/views/markets/bittrex.pug
+++ b/views/markets/bittrex.pug
@@ -2,14 +2,14 @@ extends menu
 
 block market_view
   script.
-    console.log('#{marketdata.data}');
+    console.log(''+marketdata.data+'');
   .row
     .col-md-12  
       .panel.panel-default
         .panel-heading
           strong #{settings.locale.bittrex} - #{marketdata.coin}/#{marketdata.exchange} - #{settings.locale.mkt_hours}
           a(href='#')
-            span.fa.fa-line-chart.pull-right.view-chart-disabled.iquidus.market-toggle(data-toggle='tooltip', data-placement='bottom', title='#{settings.locale.mkt_no_chart}') 
+            span.fa.fa-line-chart.pull-right.view-chart-disabled.iquidus.market-toggle(data-toggle='tooltip', data-placement='bottom', title=''+settings.locale.mkt_no_chart+'')
         table.table.table-bordered.summary-table 
           thead
             tr
