--- a/views/tx.pug
+++ b/views/tx.pug
@@ -1,14 +1,14 @@
 extends layout
 
 block content
-  - var time = format_unixtime(tx.timestamp)
+  - var time = !!!tx.timestamp ? format_unixtime(tx.timestamp) : "---";
   .col-xs-12.col-md-10.col-md-offset-1
     .well.well-sm.hidden-lg.hidden-md(style='word-wrap:break-word;')
       | #{tx.txid}
     .panel.panel-default
       .panel-heading.hidden-xs
         strong #{settings.symbol} txid: #{tx.txid}
-        a(href='/api/getrawtransaction?txid=#{tx.txid}&decrypt=1')
+        a(href='/api/getrawtransaction?txid='+tx.txid+'&decrypt=1')
           span.glyphicon.glyphicon-info-sign.iquidus.pull-right
       table.table.table-bordered.table-striped.summary-table 
         thead
@@ -23,29 +23,29 @@ block content
             tr.success
                 td #{confirms}
                 td.hidden-xs 
-                  a(href='/block/#{tx.blockhash}') #{tx.blockhash}
+                  a(href='/block/'+tx.blockhash+'') #{tx.blockhash}
                 td #{time}
                 td.view_tx  
-                  a(href='/block/#{tx.blockhash}')
+                  a(href='/block/'+tx.blockhash+'')
                     span.glyphicon.glyphicon-eye-open 
           else
             if confirms < (confirmations / 2)
               tr.danger
                 td #{confirms}
                 td.hidden-xs  
-                  a(href='/block/#{tx.blockhash}') #{tx.blockhash}
+                  a(href='/block/'+tx.blockhash+'') #{tx.blockhash}
                 td #{time}
                 td.view_tx  
-                  a(href='/block/#{tx.blockhash}')
+                  a(href='/block/'+tx.blockhash+'')
                     span.glyphicon.glyphicon-eye-open 
             else
               tr.warning
                 td #{confirms}
                 td.hidden-xs  
-                  a(href='/block/#{tx.blockhash}') #{tx.blockhash}
+                  a(href='/block/'+tx.blockhash+'') #{tx.blockhash}
                 td #{time}
                 td.view_tx  
-                  a(href='/block/#{tx.blockhash}')
+                  a(href='/block/'+tx.blockhash+'')
                     span.glyphicon.glyphicon-eye-open
     if tx.vout.length < 1
       .alert.alert-info(role='alert', style='text-align:center;')   
@@ -74,7 +74,7 @@ block content
                       - var ramount = r.amount / 100000000
                       tr
                         td 
-                          a.loading(href='/address/#{r.addresses}') 
+                          a.loading(href='/address/'+r.addresses+'')
                             =r.addresses
                         td.danger.hidden-xs #{ramount.toFixed(8)}
                       tr.hidden-lg.hidden-md
@@ -97,7 +97,7 @@ block content
                     - var ramount = r.amount / 100000000  
                     tr
                       td 
-                        a.loading(href='/address/#{r.addresses}') 
+                        a.loading(href='/address/'+r.addresses+'')
                           =r.addresses 
                       td.success.hidden-xs  #{ramount.toFixed(8)}
                     tr.hidden-lg.hidden-md
@@ -105,7 +105,7 @@ block content
                   else
                     tr
                       td 
-                        a.loading(href='/address/#{r.addresses}') 
+                        a.loading(href='/address/'+r.addresses+'')
                           =r.addresses 
                       td.success.hidden-xs  #{ramount.toFixed(8)}
                     tr.hidden-lg.hidden-md
